littlebook-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: littlebook-mysql
  labels:
    app: littlebook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: littlebook-mysql
  template:
    metadata:
      name: littlebook-mysql
      labels:
        app: littlebook-mysql
    spec:
      containers:
        - name: littlebook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            # MySQL数据存放路径
            - mountPath: /var/lib/mysql
              # 引用下面 volumes 定义的 pvc
              name: mysql-storage
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            # PVC persistent volume claim
            claimName: littlebook-mysql-pvc
