littlebook-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: littlebook-mysql
spec:
  selector:
    app: littlebook-mysql
  ports:
    - protocol: TCP
      port: 3318
      targetPort: 3306
  type: LoadBalancer
