littlebook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: littlebook-redis
spec:
  selector:
    app: littlebook-redis
  ports:
    - protocol: TCP
      # k8s 内部访问接口
      port: 6379
      # 外部访问端口，必须在 30000~32767
      nodePort: 30379
      # pod 暴露的端口
      targetPort: 6379
  type: NodePort
